force-app/main/default/objects/Lead/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <label>Annual Revenue (Enriched)</label>
    <type>Text</type>
    <length>50</length>
    <description>Annual revenue string sourced from Apollo enrichment (e.g. "$5M")</description>
</CustomField>