force-app/main/default/objects/Lead/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>1-10</fullName><default>false</default></value>
            <value><fullName>11-50</fullName><default>false</default></value>
            <value><fullName>51-200</fullName><default>false</default></value>
            <value><fullName>201-500</fullName><default>false</default></value>
            <value><fullName>501-1000</fullName><default>false</default></value>
            <value><fullName>1001-5000</fullName><default>false</default></value>
            <value><fullName>5000+</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
    <description>Headcount bucket sourced from LinkedIn / Apollo enrichment</description>
</CustomField>