force-app/main/default/objects/Lead/fields/Industry_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Industry_Vertical__c</fullName>
    <label>Industry Vertical</label>
    <type>Text</type>
    <length>255</length>
    <description>Industry vertical sourced from LinkedIn / Apollo enrichment</description>
</CustomField>