force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <label>Lead Score</label>
    <description>Composite lead quality score (0–100) computed nightly by sf-cleaner. Weighted from three signals: data completeness (30%), Salesforce activity depth (35%), and Marketing Cloud email engagement (35%).</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>