force-app/main/default/objects/Lead/fields/Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stack__c</fullName>
    <label>Tech Stack</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description>Comma-separated top technologies used by the lead's company, sourced from Apollo</description>
</CustomField>